add data repositories

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>akanash</title>
+<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
 </head>
 <body>
 	<div id="app">Now loading ... </div>
